# codex-proxy

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  codex_prompt.md  docker-compose.yml  implementation_plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/codex_proxy/: __init__.py  __main__.py  auth.py  circuit_breaker.py  compaction.py  config.py  cost.py  dashboard.py  documents.py  key_rotation.py  plugins.py  plugins_builtin.py  providers.py  rate_limiter.py  router.py  server.py  store.py  translator.py  tui.py
src/codex_proxy/db/: __init__.py  crud_analytics.py  crud_budgets.py  crud_documents.py  crud_keys.py  crud_logs.py  crud_plugins.py  crud_providers.py  crud_users.py  engine.py  migrations.py  models.py
tests/: test_auth_cost_router.py  test_circuit_breaker.py  test_compaction.py  test_config.py  test_db.py  test_documents.py  test_edge_cases.py  test_key_rotation.py  test_plugins.py  test_providers.py  test_rate_limiter.py  test_server.py  test_server_features.py  test_store.py  test_translator.py  test_tui.py
