[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-proxy"
version = "1.0.0"
description = "Responses API to Chat Completions bridge for OpenAI Codex CLI"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ZakPro", email = "zakarinoo@gmail.com" }]
keywords = ["codex", "openai", "proxy", "z.ai", "glm", "chat-completions", "responses-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "tomli>=2.0;python_version<'3.11'",
]

[project.scripts]
codex-proxy = "codex_proxy.__main__:main"

[project.urls]
Repository = "https://github.com/ZakPro/codex-proxy"
