[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-proxy"
version = "5.0.0"
description = "LLM Gateway Platform — multi-provider proxy with smart routing, cost analytics, and web dashboard"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ZakPro", email = "zakarinoo@gmail.com" }]
keywords = ["codex", "openai", "proxy", "z.ai", "glm", "chat-completions", "responses-api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "tomli>=2.0;python_version<'3.11'",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
tui = ["rich>=13.0"]
documents = ["markitdown>=0.0.2"]
postgres = ["asyncpg>=0.29"]
enterprise = ["asyncpg>=0.29", "bcrypt>=4.0", "PyJWT>=2.8", "cryptography>=42.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "mypy>=1.13",
    "aiosqlite>=0.20",
]

[project.scripts]
codex-proxy = "codex_proxy.__main__:main"

[project.urls]
Repository = "https://github.com/ZiryaNoov/codex-proxy"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501", "TC001"]

[tool.ruff.lint.isort]
known-first-party = ["codex_proxy"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
